--- a/charity-frontend/charity_system_frontend/Admin.html
+++ b/charity-frontend/charity_system_frontend/Admin.html
@@ -4,71 +4,122 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Product Management</title>
-    <link rel="stylesheet" href="./css/Admin.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRz2yb1E5+3lIcAwCIR7lB4rSxEnzrxu2q1Orj7Aw"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="Admin.css" />
   </head>
   <body>
-    <header>
-      <button class="donate-btn">Donate Now</button>
+    <header class="bg-success text-end py-2">
+      <button class="btn-primary btn-dark">Donate Now</button>
     </header>
-    <nav class="navbar">
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Admin Dashboard</a></li>
-        <li><a href="#">Shop</a></li>
-        <li><a href="#">Volunteer</a></li>
-        <li><a href="#">Login</a></li>
-      </ul>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Admin Dashboard</a>
+          </li>
+          <li class="nav-item"><a class="nav-link" href="#">Shop</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Volunteer</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Login</a></li>
+        </ul>
+      </div>
     </nav>
 
-    <div class="main-content">
-      <div class="dropdown">
-        <button class="dropbtn">Add Product</button>
-        <div class="dropdown-content">
+    <div
+      class="main-content d-flex flex-column align-items-center justify-content-center mt-4"
+    >
+      <div class="dropdown mb-3">
+        <button class="btn btn-secondary dropdown-toggle" type="button">
+          Add Product
+        </button>
+        <div class="dropdown-content p-3 border rounded shadow">
           <form>
             <label for="name">Product Name:</label>
-            <input type="text" id="name" name="name" />
+            <input type="text" id="name" name="name" class="form-control" />
             <label for="price">Price:</label>
-            <input type="text" id="price" name="price" />
+            <input type="text" id="price" name="price" class="form-control" />
             <label for="description">Description:</label>
-            <textarea id="description" name="description"></textarea>
-            <button type="submit">Add</button>
+            <textarea
+              id="description"
+              name="description"
+              class="form-control"
+            ></textarea>
+            <button type="submit" class="btn btn-success mt-2">Add</button>
           </form>
         </div>
       </div>
 
-      <div class="dropdown">
-        <button class="dropbtn">Remove Product</button>
-        <div class="dropdown-content">
+      <div class="dropdown mb-3">
+        <button class="btn btn-secondary dropdown-toggle" type="button">
+          Remove Product
+        </button>
+        <div class="dropdown-content p-3 border rounded shadow">
           <form>
             <label for="product">Select Product:</label>
-            <select id="product" name="product">
+            <select id="product" name="product" class="form-select">
               <option value="product1">Product 1</option>
               <option value="product2">Product 2</option>
             </select>
-            <button type="submit">Remove</button>
+            <button type="submit" class="btn-success btn-danger mt-2">
+              Remove
+            </button>
           </form>
         </div>
       </div>
 
-      <div class="dropdown">
-        <button class="dropbtn">Update Product</button>
-        <div class="dropdown-content">
+      <div class="dropdown mb-3">
+        <button class="btn btn-secondary dropdown-toggle" type="button">
+          Update Product
+        </button>
+        <div class="dropdown-content p-3 border rounded shadow">
           <form>
             <label for="update-product">Select Product:</label>
-            <select id="update-product" name="update-product">
+            <select
+              id="update-product"
+              name="update-product"
+              class="form-select"
+            >
               <option value="product1">Product 1</option>
               <option value="product2">Product 2</option>
             </select>
             <label for="new-name">New Product Name:</label>
-            <input type="text" id="new-name" name="new-name" />
+            <input
+              type="text"
+              id="new-name"
+              name="new-name"
+              class="form-control"
+            />
             <label for="new-price">New Price:</label>
-            <input type="text" id="new-price" name="new-price" />
+            <input
+              type="text"
+              id="new-price"
+              name="new-price"
+              class="form-control"
+            />
             <label for="new-description">New Description:</label>
-            <textarea id="new-description" name="new-description"></textarea>
-            <button type="submit">Update</button>
+            <textarea
+              id="new-description"
+              name="new-description"
+              class="form-control"
+            ></textarea>
+            <button type="submit" class="btn-success btn-primary mt-2">
+              Update
+            </button>
           </form>
         </div>
       </div>
     </div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+HuM9UO8IQ3IBk1wjK5CWmZLvTWQ7"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
