--- a/charity-frontend/charity_system_frontend/Admin.html
+++ b/charity-frontend/charity_system_frontend/Admin.html
@@ -10,7 +10,7 @@
       integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRz2yb1E5+3lIcAwCIR7lB4rSxEnzrxu2q1Orj7Aw"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="Admin.css" />
+    <link rel="stylesheet" href="admin.css" />
   </head>
   <body>
     <header class="bg-success text-end py-2">
