--- a/charity-frontend/charity_system_frontend/shop.html
+++ b/charity-frontend/charity_system_frontend/shop.html
@@ -24,9 +24,9 @@
             <article class="cls1">
                 <img src="image/file (7).jpg" alt="">
                 <ul>
-                    <li>price</li>
-                    <li>description</li>
-                    <li>quantity</li>
+                    <li>price:</li>
+                    <li>description:</li>
+                    <li>quantity:</li>
                 </ul>
 
             </article>
