integrate frontend and backend for some pages

--- a/charity-frontend/charity_system_frontend/volunteer-profile.html
+++ b/charity-frontend/charity_system_frontend/volunteer-profile.html
@@ -87,11 +87,10 @@
         </div>
         <div class="col-md-8">
             <div class="card-body card-align">
-                <p class="card-text fw-bolder"> <samp class="samp">NAME: </samp> John Smith</p>
+                <p class="card-text fw-bolder"> <samp class="samp ">NAME: </samp> <span class="custom-name" >John Smith</span></p>
                 <p class="card-text fw-bolder"> <samp class="samp">EMAIL: </samp> <a class="email" href="">johnsmith@gmail.com</a></p>
-                <p class="card-text fw-bolder"> <samp class="samp">CREATED: </samp> December 20 2024</p>
-                <p class="card-text fw-bolder"> <samp class="samp">LAST LOGIN: </samp> January 1 2025</p>
-                <p class="card-text fw-bolder"> <samp class="samp">GENDER: </samp> Male</p>
+                <p class="card-text fw-bolder"> <samp class="samp">PHONE: </samp> <span class="samp-phone">0989876555</span></p>
+                <p class="card-text fw-bolder"> <samp class="samp">SERVICES </samp><span class="samp-services"> January 1 2025</span></p>
                 <p class="card-text fw-light email-notification"> Recive email notification?</p>
                 <button type="button" class="btn btn-sm btn-success yes-button" >YES</button>
                 <button type="button" class="btn btn-secondary btn-sm" >NO</button>
@@ -123,7 +122,7 @@
         </div>
     </div>
 </footer>
-  <script src="../js/bootstrap.bundle.min.js"></script>
-  <script src="style.js"></script>
+  <!-- <script src="../js/bootstrap.bundle.min.js"></script> -->
+  <script src="./dist/volunteer-profile.js" type="module"></script>
 </body>
 </html>
