--- a/charity-frontend/charity_system_frontend/shop.html
+++ b/charity-frontend/charity_system_frontend/shop.html
@@ -20,59 +20,11 @@
         </nav>
     </header>
     <main>
-        <section class="sec1">
-            <article class="cls1">
-                <img src="image/file (7).jpg" alt="">
-                <ul>
-                    <li>price</li>
-                    <li>description</li>
-                    <li>quantity</li>
-                </ul>
+        <section class="sec1" id="productContainer">
 
-            </article>
-            <article class="cls1">
-                <img src="image/file (8).jpg" alt="">
-                <ul>
-                    <li>price</li>
-                    <li>description</li>
-                    <li>quantity</li>
-                </ul>
-            </article>
-            <article class="cls1">
-                <img src="image/file (9).jpg" alt="">
-                <ul>
-                    <li>price</li>
-                    <li>description</li>
-                    <li>quantity</li>
-                </ul>
-            </article>
-        </section>
-        <section class="sec2">
-            <article class="cls1">
-                <img src="image/file (11).jpg" alt="">
-                <ul>
-                    <li>price</li>
-                    <li>description</li>
-                    <li>quantity</li>
-                </ul>
-            </article>
-            <article class="cls1">
-                <img src="image/file (13).jpg" alt="">
-                <ul>
-                    <li>price</li>
-                    <li>description</li>
-                    <li>quantity</li>
-                </ul>
-            </article>
-            <article class="cls1">
-                <img src="image/file (14).jpg" alt="">
-                <ul>
-                    <li>price</li>
-                    <li>description</li>
-                    <li>quantity</li>
-                </ul>
-            </article>
         </section>        
     </main>
+
+    <script src="./dist/shop.js" type="module"></script>
 </body>
 </html>
