--- a/charity-frontend/charity_system_frontend/volunteer-profile.html
+++ b/charity-frontend/charity_system_frontend/volunteer-profile.html
@@ -124,5 +124,6 @@
 </footer>
   <!-- <script src="../js/bootstrap.bundle.min.js"></script> -->
   <script src="./dist/volunteer-profile.js" type="module"></script>
+  <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
