--- a/charity-frontend/charity_system_frontend/Admin.html
+++ b/charity-frontend/charity_system_frontend/Admin.html
@@ -15,59 +15,20 @@
   <body>
     <main>
       <div class="header bg-dark p-1">
-        <header class="heading">
-          <div class="d-flex align-items-center">
-            <img
-              class="logo me-3"
-              src="./photos/enredada.jpg"
-              alt="Logo"
-              style="max-height: 50px; width: auto"
-            />
-            <h4
-              class="m-0"
-              style="font-family: 'Clicker Script', serif; font-weight: 800"
-            >
-              Enredada
-            </h4>
-          </div>
-          <ul class="navbar-link d-flex list-unstyled mb-0 mx-2 text-white">
-            <li class="me-3">
-              <a href="index.html" class="text-decoration-none text-white"
-                >Home</a
-              >
-            </li>
-            <li class="me-3">
-              <a href="shop.html" class="text-decoration-none text-white"
-                >Shop</a
-              >
-            </li>
-            <li class="me-3">
-              <a
-                href="#"
-                class="text-decoration-none text-white"
-                onclick="signup()"
-                >Volunteer</a
-              >
-            </li>
-            <li class="me-3">
-              <a
-                href="#"
-                class="text-decoration-none text-white"
-                onclick="admin()"
-                >Admin-Dashboard</a
-              >
-            </li>
-            <li class="me-3">
-              <a
-                href="#"
-                class="text-decoration-none text-white border rounded bg-success"
-                onclick="login()"
-                style="width: 150px"
-                >Login</a
-              >
-            </li>
-          </ul>
-        </header>
+        <div class="navv" onclick="toggleSidebar()">
+          <img class="burger-bar img-fluid mx-auto d-block" src="./photos/nav.png" style="max-width: 50px;">
+      </div>
+      <header class="heading ">
+        <div class=" d-flex justify-content-between align-items-center"><img class="logo ms-5" src="./photos/enredada.jpg" alt="Logo" ><h4 
+            style="font-family: Clicker Script, serif;; font-weight: 800;">Enredada</h4></div>
+            <ul class="navbar-link list-unstyled mb-0 mx-2 text-white">
+                <li class="me-3"><a href="index.html" class="text-decoration-none text-white">Home</a></li>
+                <li class="me-3"><a href="shop.html" class="text-decoration-none text-white">Shop</a></li>
+                <li class="me-3"><a href="#" class="text-decoration-none text-white" onclick="signup()">Volunteer</a></li>
+                <li class="me-3"><a href="#" class="text-decoration-none text-white" onclick="admin()">Admin-Dashboard</a></li>
+                <li class=" login me-3"><a href="#" class="text-decoration-none text-white border rounded bg-success" onclick="login()" style="width: 150px;">Login</a></li>
+            </ul>
+    </header>
       </div>
 
       <div
@@ -401,6 +362,7 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+HuM9UO8IQ3IBk1wjK5CWmZLvTWQ7"
       crossorigin="anonymous"
     ></script>
-    <script src="index.js"></script>
+    <script src="./index.js"></script>
+    <script src="./dist/volunteerLogin.js" type="module"></script>
   </body>
 </html>
