--- a/charity-frontend/charity_system_frontend/index.html
+++ b/charity-frontend/charity_system_frontend/index.html
@@ -12,14 +12,6 @@
 
     
 </head>
-<style>
-   
-.error-message {
-    color: red;
-    font-size: 0.9em;
-}
-
-</style>
 
 <body>
 
@@ -291,7 +283,7 @@
     </div>
 </footer>
 <script src="./index.js"></script>
-<script src="./dist/home.js" type="module"></script>
+<!-- <script src="./dist/home.js" type="module"></script> -->
 <script src="./dist/volunteerLogin.js" type="module"></script>
 </body>
 </html>
