--- a/charity-frontend/charity_system_frontend/volunteer-profile.html
+++ b/charity-frontend/charity_system_frontend/volunteer-profile.html
@@ -39,12 +39,8 @@
 <div class="modal-body">
     <form class="row g-3" id="editProfileForm">
         <div class="col-12">
-            <label for="firstName" class="form-label">FIRST NAME</label>
+            <label for="firstName" class="form-label">Full NAME</label>
             <input type="text" class="form-control" id="firstName" placeholder="enter your first name">
-        </div>
-        <div class="col-12">
-            <label for="lastName" class="form-label">LAST NAME</label>
-            <input type="text" class="form-control" id="lastName" placeholder="enter your last name">
         </div>
         <div class="col-md-6">
             <label for="inputEmail4" class="form-label">Email</label>
@@ -55,8 +51,8 @@
             <input type="password" class="form-control" id="inputPassword4">
         </div>
         <div class="col-12">
-            <label for="inputAddress2" class="form-label">Address</label>
-            <input type="text" class="form-control" id="inputAddress2" placeholder="enter your Address">
+            <label for="inputAddress2" class="form-label">Phone Number</label>
+            <input type="text" class="form-control" id="inputAddress2" placeholder="enter your phone number">
         </div>
         <div class="col-md-4">
             <label for="inputState" class="form-label">GENDER</label>
@@ -69,7 +65,7 @@
 </div>
 
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
         <button type="button" class="btn btn-success" id="saveChangesButton">Save changes</button>
       </div>
     </div>
@@ -122,8 +118,8 @@
         </div>
     </div>
 </footer>
-  <!-- <script src="../js/bootstrap.bundle.min.js"></script> -->
+  <script src="./js/bootstrap.bundle.min.js"></script>
   <script src="./dist/volunteer-profile.js" type="module"></script>
-  <script src="../js/bootstrap.bundle.min.js"></script>
+  <script src="./dist/volunteer-editProfile.js" type="module"></script>
 </body>
 </html>
