--- a/charity-frontend/charity_system_frontend/shop.html
+++ b/charity-frontend/charity_system_frontend/shop.html
@@ -30,6 +30,10 @@
             </ul>
     </header>
       </div>
+      
+      <section class="sec1" id="productContainer">
+
+      </section>
     </main>
     <div class="container mt-5">
       <form id="signupForm" class="modal-form p-4 rounded">
