integrate api for editing volunteers profile

--- a/charity-frontend/charity_system_frontend/volunteer-profile.html
+++ b/charity-frontend/charity_system_frontend/volunteer-profile.html
@@ -397,6 +397,7 @@
 </footer>
   <!-- <script src="../js/bootstrap.bundle.min.js"></script> -->
   <script src="./dist/volunteer-profile.js" type="module"></script>
+  <script src="./dist/volunteer-editProfile.js" type="module"></script>
   <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
