--- a/charity-frontend/charity_system_frontend/index.html
+++ b/charity-frontend/charity_system_frontend/index.html
@@ -283,7 +283,7 @@
     </div>
 </footer>
 <script src="./index.js"></script>
-<!-- <script src="./dist/home.js" type="module"></script> -->
+<script src="./dist/home.js" type="module"></script>
 <script src="./dist/volunteerLogin.js" type="module"></script>
 </body>
 </html>
