--- a/charity-frontend/charity_system_frontend/volunteer-profile.html
+++ b/charity-frontend/charity_system_frontend/volunteer-profile.html
@@ -107,12 +107,12 @@
 <div class="modal-body">
     <form class="row g-3" id="editProfileForm">
         <div class="col-12">
-            <label for="firstName" class="form-label">FIRST NAME</label>
-            <input type="text" class="form-control" id="firstName" placeholder="enter your first name">
+            <label for="firstName" class="form-label">FULL NAME</label>
+            <input type="text" class="form-control" id="firstName" placeholder="enter your full name">
         </div>
         <div class="col-12">
-            <label for="lastName" class="form-label">LAST NAME</label>
-            <input type="text" class="form-control" id="lastName" placeholder="enter your last name">
+            <label for="lastName" class="form-label">Phone</label>
+            <input type="text" class="form-control" id="lastName" >
         </div>
         <div class="col-md-6">
             <label for="inputEmail4" class="form-label">Email</label>
@@ -123,16 +123,10 @@
             <input type="password" class="form-control" id="inputPassword4">
         </div>
         <div class="col-12">
-            <label for="inputAddress2" class="form-label">Address</label>
-            <input type="text" class="form-control" id="inputAddress2" placeholder="enter your Address">
-        </div>
-        <div class="col-md-4">
-            <label for="inputState" class="form-label">GENDER</label>
-            <select id="inputState" class="form-select">
-                <option selected>FEMALE</option>
-                <option>MALE</option>
-            </select>
-        </div>
+          <label for="inputAddress2" class="form-label">Services</label>
+          <textarea class="form-control" id="inputAddress2" placeholder="enter your service"></textarea>
+      </div>
+      
     </form>
 </div>
 
