--- a/charity-frontend/charity_system_frontend/index.html
+++ b/charity-frontend/charity_system_frontend/index.html
@@ -28,6 +28,7 @@
                     <li class="me-3"><a href="index.html" class="text-decoration-none text-white">Home</a></li>
                     <li class="me-3"><a href="shop.html" class="text-decoration-none text-white">Shop</a></li>
                     <li class="me-3"><a href="#" class="text-decoration-none text-white" onclick="signup()">Volunteer</a></li>
+                    <li class="me-3"><a href="#" class="text-decoration-none text-white" onclick="reservation()">Reservation</a></li>
                     <li class="me-3"><a href="#" class="text-decoration-none text-white" onclick="admin()">Admin-Dashboard</a></li>
                     <li class=" login me-3"><a href="#" class="text-decoration-none text-white border rounded bg-success" onclick="login()" style="width: 150px;">Login</a></li>
                 </ul>
@@ -71,6 +72,68 @@
     </div>
     
 </main>
+
+
+
+
+
+
+<div class="container mt-5">
+    <form id="reservationForm" class="modal-form p-4 rounded">
+        <h2 class="text-center mb-4">Sign Up</h2>
+        <div id="signupError" class="error-message"></div>
+
+        <div class="form-group">
+            <label for="fullname">Fullname</label>
+            <input type="text" class="form-control custom-size" id="fullname" placeholder="Enter your name" required />
+        </div>
+
+        <div class="form-group">
+            <label for="signupemail">Email address</label>
+            <input type="email" class="form-control custom-size" id="signupemail" placeholder="Enter email" required />
+        </div>
+
+        <div class="form-group">
+            <label for="phone">Phone</label>
+            <input type="tel" class="form-control custom-size" id="phone" placeholder="Enter phone number" required />
+        </div>
+
+        <div class="form-group">
+            <label for="date">Date</label>
+            <input type="date" class="form-control custom-size" id="date" required />
+        </div>
+
+        <div class="form-group">
+            <label for="time">Time</label>
+            <input type="time" class="form-control custom-size" id="time" required />
+        </div>
+
+        <div id="signupError4" class="error-message"></div>
+
+        <div class="form-group">
+            <label for="services">Services</label>
+            <textarea class="form-control custom-size" id="services" placeholder="Text Here"></textarea>
+        </div>
+
+        <div id="signupError2" class="error-message"></div>
+
+        <div class="form-group">
+            <div class="d-flex justify-content-end">
+                <button type="submit" class="btn btn-success me-2" onclick="validateReservation()">Confirm</button>
+                <button type="button" class="btn btn-danger" onclick="closeForm()">Close</button>
+            </div>
+        </div>
+    </form>
+</div>
+
+
+
+
+
+
+
+
+
 <div class="container mt-5">
     <form id="signupForm" class="modal-form p-4 rounded">
         <h2 class="text-center mb-4">Sign Up</h2>
