--- a/charity-frontend/charity_system_frontend/shop.html
+++ b/charity-frontend/charity_system_frontend/shop.html
@@ -31,10 +31,12 @@
     </header>
       </div> 
             <div class="container"> 
-              <div class="icon-cart">
-               <img src="./photos/cart.png" style="height: 50px; margin-right: 10px;" onclick="cartIcon()">
-               <span>0</span> 
-              </div> 
+              <div class="d-flex">
+                <h2>Product List</h2>
+                <div class="icon-cart">
+                <img src="./photos/cart.png" style="height: 50px; margin-right: 10px;" onclick="cartIcon()">
+                <!-- <span id="counter">0</span>  -->
+            </div></div>
             <section class="sec1" id="productContainer"> 
               <div class="item">
                <div class="image"> 
@@ -59,7 +61,19 @@
                      
     </main>
 
+    <!-- <script>
+      let itemCount = 0; // Initialize itemCount
 
+      function addToCart(button) {
+          itemCount += 1; // Increment itemCount
+          let counterElement = document.getElementById('counter');
+          if (counterElement) {
+              counterElement.textContent = itemCount; // Update the counter display
+          } else {
+              console.error('Element with ID "counter" not found.');
+          }
+      }
+  </script> -->
     <div class="cart-tab" id="cart-tab">
       <h2 style="color: whitesmoke; background-color: rgb(28, 53, 33); text-align: center;">Shopping Cart</h2>
       <div class="listCart" id="cartContainer"></div>
