integrate reservation api to the frontend

--- a/charity-frontend/charity_system_frontend/index.html
+++ b/charity-frontend/charity_system_frontend/index.html
@@ -30,7 +30,7 @@
                     <li class="me-3"><a href="#" class="text-decoration-none text-white" onclick="signup()">Volunteer</a></li>
                     <li class="me-3"><a href="./reservation.html" class="text-decoration-none text-white">Reservation</a></li>
                     <li class="me-3"><a href="#" class="text-decoration-none text-white" onclick="admin()">Admin-Dashboard</a></li>
-                    <li class=" login me-3"><a href="#" class="text-decoration-none text-white border rounded bg-success" onclick="login()" style="width: 150px;">Login</a></li>
+                    <li class=" login me-3"><a href="#" class="text-decoration-none text-white border rounded bg-success p-1" onclick="login()" style="width: 150px;">Login</a></li>
                 </ul>
         </header>
         <div class="position-relative" style="height: 200px;"> 
