--- a/charity-frontend/charity_system_frontend/reservation.html
+++ b/charity-frontend/charity_system_frontend/reservation.html
@@ -30,9 +30,12 @@
             </ul>
     </header>
       </div>
-      <div class="container">
+
+      <div class="container-main">
         
       </div>
+
+
       <div class="description">
         Celebrate your special moments with us and the cherished elders of our charity association!
          From birthdays to anniversaries, and all the meaningful events in between, your celebrations
@@ -40,8 +43,8 @@
           to celebrate with us, you not only create lasting memories but also bring joy and companionship to the elders who hold a wealth of experience and love.
       </div>
       <div class="rev-btn">
-        <button>reveiw event</button>
-        <button onclick="reservation()" >reserve event</button>
+        <button id="review">Upcoming events</button>
+        <button id="reserve" onclick="reservation()" >Make reservation</button>
       </div>
    </main>
       
@@ -81,7 +84,7 @@
         <div id="signupError4" class="error-message"></div>
 
         <div class="form-group">
-            <label for="detail">Additional Details</label>
+            <label for="detail">Event Details</label>
             <textarea class="form-control custom-size" id="services" placeholder="Text Here"></textarea>
         </div>
 
@@ -285,6 +288,8 @@
       <script src="./dist/add-product.js" type="module"></script>
       <script src="./dist/delete-product.js" type="module"></script>
       <script src="./dist/update-product.js" type="module"></script>
+      <script src="./dist/add-reservation.js" type="module"></script>
+      <script src="./dist/display-reservations.js" type="module"></script>
     </body>
   </html>
   
