--- a/charity-frontend/charity_system_frontend/Admin.html
+++ b/charity-frontend/charity_system_frontend/Admin.html
@@ -25,6 +25,7 @@
                 <li class="me-3"><a href="index.html" class="text-decoration-none text-white">Home</a></li>
                 <li class="me-3"><a href="shop.html" class="text-decoration-none text-white">Shop</a></li>
                 <li class="me-3"><a href="#" class="text-decoration-none text-white" onclick="signup()">Volunteer</a></li>
+                <li class="me-3"><a href="./reservation.html" class="text-decoration-none text-white">Reservation</a></li>
                 <li class="me-3"><a href="#" class="text-decoration-none text-white" onclick="admin()">Admin-Dashboard</a></li>
                 <li class=" login me-3"><a href="#" class="text-decoration-none text-white border rounded bg-success" onclick="login()" style="width: 150px;">Login</a></li>
             </ul>
