--- a/charity-frontend/charity_system_frontend/reservation.html
+++ b/charity-frontend/charity_system_frontend/reservation.html
@@ -25,6 +25,7 @@
                 <li class="me-3"><a href="index.html" class="text-decoration-none text-white">Home</a></li>
                 <li class="me-3"><a href="shop.html" class="text-decoration-none text-white">Shop</a></li>
                 <li class="me-3"><a href="#" class="text-decoration-none text-white" onclick="signup()">Volunteer</a></li>
+                <li class="me-3"><a href="./reservation.html" class="text-decoration-none text-white">Reservation</a></li>
                 <li class="me-3"><a href="#" class="text-decoration-none text-white" onclick="admin()">Admin-Dashboard</a></li>
                 <li class=" login me-3"><a href="#" class="text-decoration-none text-white border rounded bg-success" onclick="login()" style="width: 150px;">Login</a></li>
             </ul>
@@ -40,11 +41,12 @@
            become even more memorable when shared with our wise and wonderful community members. By choosing 
            to celebrate with us, you not only create lasting memories but also bring joy and companionship to the elders who hold a wealth of experience and love.
      
-        </p>  </div>
+        </p>  
       <div class="rev-btn">
         <button>reveiw event</button>
         <button onclick="reservation()" >reserve event</button>
       </div>
+    </div>
    </main>
       
   
