renaming redundant names

--- a/charity-frontend/charity_system_frontend/shop.html
+++ b/charity-frontend/charity_system_frontend/shop.html
@@ -289,7 +289,7 @@
       </div>
     </footer> 
     <script src="./index.js"></script>
-    <script src="./shop.js"></script>
+    <script src="./shoping.js"></script>
     <script src="./dist/shop.js" type="module"></script>
     <script src="./dist/volunteerLogin.js" type="module"></script>
   </body>
