--- a/charity-frontend/charity_system_frontend/reservation.html
+++ b/charity-frontend/charity_system_frontend/reservation.html
@@ -9,6 +9,9 @@
       rel="stylesheet"
       href="./node_modules/bootstrap/css/bootstrap.min.css"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
+
     <link rel="stylesheet" href="./css/reservation.css" />
     <link rel="stylesheet" href="./css/header.css" />
   </head>
@@ -39,12 +42,18 @@
 
       <div class="description">
         <p>
-          Celebrate your special moments with us and the cherished elders of our charity association!
-          From birthdays to anniversaries, and all the meaningful events in between, your celebrations
-           become even more memorable when shared with our wise and wonderful community members. By choosing 
-           to celebrate with us, you not only create lasting memories but also bring joy and companionship to the elders who hold a wealth of experience and love.
+          <span>Celebrate</span> your special moments with us and the cherished elders of our <span>charity</span> association!
+          From <span>birthdays</span> to <span>anniversaries</span>, and all the meaningful events in between, your <span>celebrations</span>
+           become even more <span>memorable</span> when shared with our wise and wonderful community members. By choosing 
+           to <span>celebrate</span> with us, you not only create <span>lasting memories</span> but also bring <span>joy</span> and companionship to the <span>elders</span> who hold a wealth of experience and love. 
      
-        </p>  
+        </p> 
+        <div class="hearts">
+          <i class="fa-solid fa-heart"></i>
+          <i class="fa-solid fa-heart"></i>
+          <i class="fa-solid fa-heart"></i>
+        </div>
+         
       <div class="rev-btn">
         <button id="review">Upcoming events</button>
         <button id="reserve" onclick="reservation()" >Make reservation</button>
