--- a/charity-frontend/charity_system_frontend/shop.html
+++ b/charity-frontend/charity_system_frontend/shop.html
@@ -54,7 +54,7 @@
     <div class="cart-tab" id="cart-tab">
       <h2 style="color: whitesmoke; background-color: rgb(28, 53, 33); text-align: center; padding: 12px 0;">Shopping Cart</h2>
       <div class="listCart" id="cartContainer"></div>
-      
+      <div class="total"></div>
       <div class="btn">
         <button type="button" class="btn btn-danger" onclick="shopClose()">
           Close
