--- a/charity-frontend/charity_system_frontend/index.html
+++ b/charity-frontend/charity_system_frontend/index.html
@@ -35,7 +35,7 @@
         </header>
         <div class="position-relative" style="height: 200px;"> 
             <h3 class="text-white font-weight-bold ms-3 my-4" style="font-family: 'Papyrus', 'Comic Sans MS', cursive;">Honor for the Elders!</h3>
-            <button class="btn btn-success p-1 rounded position-absolute text-bold">Donate Now</button>
+            <a class="btn btn-success p-1 rounded position-absolute text-bold" href="./donation-page.html">Donate Now</a>
         </div>
     </div>
     <div class="container">
@@ -134,6 +134,8 @@
         />
         </div>
 
+        <div id="signupError5" class="error-message"></div>
+
         <div class="form-group">
         <label for="confirmSignup">Confirm Password</label>
         <input
@@ -174,6 +176,8 @@
         </div>
     </form>
     </div>
+
+
     <div class="container mt-5">
     <div id="loginForm" class="modal-loginform bg-white p-4 rounded">
         <h2 class="text-center">Login</h2>
