--- a/charity-frontend/charity_system_frontend/shop.html
+++ b/charity-frontend/charity_system_frontend/shop.html
@@ -60,27 +60,27 @@
   
           <div class="form-group">
               <label for="fullname">Fullname</label>
-              <input type="text" class="form-control custom-size"placeholder="Enter your name" required />
+              <input type="text" id="delivery-name" class="form-control custom-size"placeholder="Enter your name" required />
           </div>
   
   
           <div class="form-group">
               <label for="phone">Phone</label>
-              <input type="tel" class="form-control custom-size"  placeholder="Enter phone number" required />
+              <input type="tel" id="delivery-phone" class="form-control custom-size"  placeholder="Enter phone number" required />
           </div>
   
           <div id="orderError4" class="error-message"></div>
   
           <div class="form-group">
-              <label for="adress">Adress</label>
-              <textarea class="form-control custom-size"  placeholder="Text Here"></textarea>
+              <label for="adress">Address</label>
+              <textarea id="delivery-address" class="form-control custom-size"  placeholder="Text Here"></textarea>
           </div>
   
           <div id="orderError2" class="error-message"></div>
   
           <div class="form-group">
               <div class="d-flex justify-content-end">
-                  <button type="submit" class="btn btn-success me-2" onclick="validateReservation()">Confirm</button>
+                  <button type="submit" class="btn btn-success me-2" >Confirm</button>
                   <button type="button" class="btn btn-danger" onclick="deliveryClose()">Close</button>
               </div>
           </div>
@@ -92,14 +92,14 @@
 
     
     <div class="cart-tab" id="cart-tab">
-      <h2 style="color: whitesmoke; background-color: rgb(28, 53, 33); text-align: center; padding: 12px 0;">Shopping Cart</h2>
+      <h3 style="color: rgb(11, 11, 11); background-color: rgb(189, 186, 186); font-weight: 700; text-align: center; padding: 12px 0;">Shopping Cart</h3>
       <div class="listCart" id="cartContainer"></div>
-      <div class="total"></div>
-      <div class="btn">
-        <button type="button" class="btn btn-danger" onclick="shopClose()">
+      <div class="total mt-3"></div>
+      <div class="btn  d-flex  justify-content-center">
+        <button type="button" class="btn btn-danger me-2" onclick="shopClose()">
           Close
           </button>
-        <button class="btn btn-secondary" id="confirm-order" onclick="confirmOrder()">confirm</button>
+        <button class="btn btn-success me-2" id="confirm-order" onclick="confirmOrder()">confirm</button>
       </div>
     </div>
   </div>
@@ -319,5 +319,6 @@
     <script src="./shoping.js"></script>
     <script src="./dist/shop.js" type="module"></script>
     <script src="./dist/volunteerLogin.js" type="module"></script>
+    <script src="./dist/add-order.js" type="module"></script>
   </body>
 </html>
